--- a/src/ui-pages/UserHome/components/Content/MessageList.css
+++ b/src/ui-pages/UserHome/components/Content/MessageList.css
@@ -1,6 +1,76 @@
-.MessageList {
-    overflow-y: auto;
-    padding: 4px;
-    height: 80vh;
+.MessageListCard {
+    margin-left: 2%;
+    overflow-y: "scroll";
+    height: "calc(100vh - 110px)",
   }
-  
+
+.MessageList {
+  margin-top: 1%; 
+  overflow-y: auto;
+}
+
+.flex-container {
+  padding:2px;
+  margin-top:2%;
+   height: calc(100vh - 190px);
+}
+.flex-item-right {
+  width:"96%";
+  margin-left:"2%";
+}
+@media only screen and (max-width: 450px) {
+  .flex-container {
+    padding:2px;
+    margin-top:2%;
+     height: calc(100vh - 190px);
+  }
+}
+@media only screen and (max-width: 400px) {
+  .flex-container {
+    padding:2px;
+    margin-top:4%;
+     height: calc(100vh - 190px);
+  }
+}
+@media only screen and (max-width: 350px) {
+  .flex-container {
+    padding:2px;
+    margin-top:6%;
+     height: calc(100vh - 190px);
+  }
+}
+@media only screen and (max-width: 300px) {
+  .flex-container {
+    padding:2px;
+    margin-top:9%;
+     height: calc(100vh - 190px);
+  }
+}
+@media only screen and (max-width: 250px) {
+  .flex-container {
+    padding:2px;
+    margin-top:13%;
+     height: calc(100vh - 190px);
+  }
+}
+@media only screen and (max-width: 200px) {
+  .flex-container {
+    padding:2px;
+    margin-top:20%;
+     height: calc(100vh - 190px);
+  }
+}
+@media only screen and (max-width: 150px) {
+  .flex-container {
+    padding:2px;
+    margin-top:30%;
+     height: calc(100vh - 190px);
+  }
+}
+@media only screen and (max-width: 120px) {
+  .flex-container {
+    padding:2px;
+    margin-top:40%;
+     height: calc(100vh - 190px);
+  }
+}
