--- a/src/ui-pages/UserHome/components/Content/VideoCall/index.css
+++ b/src/ui-pages/UserHome/components/Content/VideoCall/index.css
@@ -1,5 +1,4 @@
-.participant {
-   /* background: rgb(53 177 164);  */
+/* .participant {
      padding: 2px; 
     display: inline-block;
     margin-right: 10px;
@@ -8,7 +7,6 @@
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
-    /* padding: 0 2em 2em; */
    
   }
   button{
@@ -31,4 +29,62 @@
   }
   header{
     justify-content: space-between;    
-  }
+  } */
+  participant {
+    padding: 2px;
+   display: inline-block;
+   overflow: hidden;
+   border-radius: 10px;
+ }
+ .remote-participants {
+   display: flex;
+   flex-wrap: nowrap;
+   justify-content: space-between;
+   /* padding: 0 2em 2em; */
+ }
+ button{
+     margin-left: 89%;
+ }
+ video {
+   width: 100%;
+   max-width: 600px;
+   display: block;
+   margin: 0 auto;
+   border-radius: 6px;
+ }
+ .main{
+   background: rgb(222 243 240);
+ }
+ .room {
+   position: relative;
+   padding-bottom: 3px;
+ }
+ header{
+   justify-content: space-between;
+ }
+ div.relative {
+   position: relative;
+   width: 100%;
+   height: 80vh;
+   overflow: hidden;
+   display: block;
+   position: fixed;
+   border-radius: 6px;
+ }
+ div.absolute1 {
+   position: absolute;
+   top: 0px;
+   left: 0;
+   width: 20%;
+   height: 10vh;
+   margin: 10px;
+   border-radius: 10px;
+ }
+ div.absolute2 {
+   position: absolute;
+   bottom: 10vh;
+   left: 0;
+   width: 100%;
+   height: 50px;
+   margin : 5%;
+ }
