--- a/src/ui-pages/UserHome/components/Content/Message.css
+++ b/src/ui-pages/UserHome/components/Content/Message.css
@@ -71,6 +71,9 @@
     background-color: #ffffff;
     color: #000000;
     display: inline-block;
+    text-align: left;
+    word-break: break-all;
+    word-wrap: break-word;
   }
   
   .currentMember > .Message-content .text {
